Added a TODO note that some view logic should go in a helper.

--- a/app/views/game.erb
+++ b/app/views/game.erb
@@ -3,6 +3,8 @@
   <head>
     <title>rps</title>
     <%
+      # TODO: This should go in a helper.
+
       player_1_name = ""
       player_2_name = ""
       if game.player_1
