--- a/app/views/posts.erb
+++ b/app/views/posts.erb
@@ -1,9 +1,9 @@
 <% posts.each do |post| %>
-  <div class="post">
-    <div class="post-content">
+  <div class=post>
+    <div class=post-content>
       <%= post.content %>
     </div>
-    <div class="post-replies">
+    <div class=post-replies>
       <%= erb(:posts, locals: {posts: post.children}) %>
     </div>
   </div>
