--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,9 @@
-body {
+html, body {
   background: black;
   color: white;
+}
 
+.posts, body > .post {
   display: table;
   margin-left: auto; margin-right: auto;
 }
