--- a/app/views/posts/edit.erb
+++ b/app/views/posts/edit.erb
@@ -9,10 +9,16 @@
     class=edit-post-content
     name=content
     <% if parent %>
-      placeholder='reply'
+      placeholder='reply to <%= parent.user.nick %>'
     <% else %>
       placeholder='tell me your foolish lies'
     <% end %>
   ><%= post.try(:content) %></textarea>
-  <input type=submit class=edit-post-submit value=<%= if parent then 'reply' else 'save' end %>>
+  <div class=edit-post-toolbar>
+    <% unless current_user %>
+      <input type=email name=email placeholder=email>
+      <input type=password name=password placeholder=password>
+    <% end %>
+    <input type=submit class=edit-post-submit value=<%= if parent then 'reply' else 'save' end %>>
+  </div>
 </form>
